Wed Jun 25 21:32:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Code tidyup.  Also, make queries keep track of
	  the connection they were obtained from: complain if an attempt to
	  combined queries from different connections is made.  This is
	  preparation for allowing the search to be performed as a method
	  of Query.

Wed Jun 25 13:53:02 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Allow division of queries by a number (equivalent
	  to multiplying by 1.0 / number).

Wed Jun 25 13:36:30 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py: Add &, | and ^ operators for queries.

Wed Jun 25 12:09:21 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/: Move implementation of Query() to a separate file, and
	  remove the __iter__() method, since it returns raw xapian terms,
	  which we don't want to expose in the user interface.

Wed Jun 25 11:33:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/weight_action.py: Modify regression test so that
	  it actually tests the problem.
	* xappy/searchconnection.py: Add new Query object, which keeps
	  track of references to necessary extra objects.  Use this to
	  ensure that the PostingSource for a weight query doesn't get
	  forgotten before the query does.  This class also provides an
	  alternative, and hopefully nicer, way to compose queries.  Modify
	  all methods which create queries to return xappy.Query objects
	  instead of xapian.Query objects, and add support everywhere for
	  being supplied with either xapian.Query objects or xappy.Query
	  objects.  Documentation of this, other than doccomments, is
	  not yet written.
	* xappy/__init__.py: Add Query object to external names.
	* xappy/highlight.py: Add understanding of xappy.Query() objects.

Tue Jun 24 17:47:41 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
